# openocd-esp32

./: .checkpatch.conf  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  config.h.in  openocd-esp32.sln  openocd-esp32.vgdbcmake
.gitlab/ci/downstream/idf_5_2_x/: test.yml
.gitlab/ci/downstream/idf_5_3_x/: test.yml
QuickSetup/: devices.xml  interfaces.xml  transports.xml
cmake/: BuildOptions.cmake  config.h.in  configure.cmake
contrib/loaders/flash/esp/esp32/: Makefile
contrib/loaders/flash/esp/esp32c6/: stub_flasher_chip.c
contrib/loaders/flash/espressif/esp32h2/: stub_flasher_chip.c
contrib/loaders/flash/espressif/esp32p4/: stub_flasher_image.h
jimtcl-cmake/: CMakeLists.txt
libusb1-cmake/: CMakeLists.txt
src/: CMakeLists.txt  openocd.c
src/flash/: CMakeLists.txt
src/flash/nand/: CMakeLists.txt
src/flash/nor/: CMakeLists.txt  esp32.c  esp_xtensa.h
src/helper/: util.c
src/jtag/: CMakeLists.txt  adapter.c
src/rtos/: freertos.c  nuttx.c  rtos.c  rtos.h  rtos_multicore.c  zephyr.c
src/server/: gdb_server.c  server.c  server.h
testing/esp/: debug_backend_tests.py  test_bp.py  test_special.py
testing/esp/test_apps/gen_ut_app/main/: gen_ut_app_custom_esp32s2.ld  special_tests.c
tools/: generate_gitlab_report.py
tools/scripts/: camelcase.txt
